       parity_max_odd(n) = parity_max(true, n)
       parity_max_even(n) = parity_max(false, n)
       parity_min(is_odd, n) = parity(false, is_odd, n)
       parity_min_odd(n) = parity_min(true, n)
       parity_min_even(n) = parity_min(false, n)

  - partial_degeneralize() is a new function performing partial
    degeneralization to get rid of conjunctions of Inf terms in
    acceptance conditions.

  - simplify_acceptance_here() and simplify_acceptance() learned to
    simplify subformulas like Fin(i)&Fin(j) or Inf(i)|Inf(j), or some
    more complex variants of those.  If i us uniquely used in the
    acceptance condition these become respectively Fin(i) or Inf(i),
    and the automaton is adjusted to that i also appears where j
    appeared.

  - propagate_marks_vector() and propagate_marks_here() are helper
    functions for propagatings marks on the automaton: ignoring
    self-loop and out-of-SCC transitions, marks common to all the
    input transitions of a state can be pushed to all outgoing
    transitions of a state, and vice-versa.  This is repeated until a
    fix point is reached.  propagate_marks_vector() does not modify
    the automaton and returns a vector of the acc_cond::mark_t that
    should be on each transition; propagate_marks_here() actually
    modifies the automaton.

New in spot 2.8.5 (2020-01-04)

  Bugs fixed:

  - ltl2tgba -B could return automata with "t" acceptance, instead
    of the expected Inf(0).

  - twa_graph::merge_edges() (a.k.a. autfilt --merge-transitions) was
    unaware that merging edges can sometimes transform a
    non-deterministic automaton into a deterministic one, causing the
    following unexpected diagnostic:
    "print_hoa(): automaton is universal despite prop_universal()==false"
    The kind of non-deterministic automata where this occurs is not
    naturally produced by any Spot algorithm, but can be found for
    instance in automata produced by Goal 2015-10-18.

New in spot 2.8.4 (2019-12-08)
